# rust-enum-tutorial

./: .gitignore  Cargo.toml  README.md  build.sh
docs/: index.html
docs/css/: style.css
docs/js/: index.js  package.json  rust_enum_tutorial.d.ts  rust_enum_tutorial.js  rust_enum_tutorial_bg.wasm  rust_enum_tutorial_bg.wasm.d.ts
src/: lib.rs
