[package]
name = "rust-enum-tutorial"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

[profile.release]
opt-level = "s"
lto = true
